# smoke-haven-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/backups/: apps.py  urls.py  views.py
apps/backups/migrations/: 0001_initial.py
apps/backups/models/: backup.py
apps/backups/templatetags/: format_date.py
apps/core/: views.py
apps/core/admin/: __init__.py  base_admin.py
apps/core/models/: base_model.py
apps/invoices/: apps.py  filters.py  urls.py
apps/invoices/admin/: __init__.py  document.py  invoice.py  invpoice_payment.py
apps/invoices/forms/: __init__.py  document.py  invoice.py  invoice_payment.py
apps/invoices/migrations/: 0001_initial.py  0002_invoicepayment_invoice.py  0003_alter_invoice_amount_to_pay.py  0004_alter_invoice_amount_to_pay.py  0005_alter_invoice_deadline.py  0006_alter_invoice_deadline.py  (+5 more)
apps/products/: apps.py  urls.py
apps/users/: apps.py  forms.py  urls.py  views.py
config/: settings.py  urls.py
config/common/: __init__.py  authentication.py  databases.py  installed_apps.py  internationalization.py  middleware.py  paths.py  smtp.py  storage.py  templates.py
templates/: base.html  index.html
templates/backups/: backups.html
templates/invoices/: create_invoice.html  create_invoice_payment.html  detail_invoice.html  invoices.html  summary.html  update_invoice.html
templates/products/: create_supplier.html  suppliers.html  update_supplier.html
templates/users/: login.html  profile.html  two_factor_login.html  two_factor_setup.html  two_factor_verify.html  update_user.html
ui/core/css/: base.css  (+1 more)
(+51 files in other folders)
